cleaning up, fixed image not showing issue

--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -1,36 +1,33 @@
-.info {
-    padding: 4rem;
-    background: #fff;
-    text-align: center;
-    font-family: Bahnschrift;
-  }
-  
-  h1 {
+.about_block {
+    padding: 3rem;
     text-align: center;
     font-family: Bahnschrift;
   }
 
   h2 {
-    text-align: center;
-    font-family: Bahnschrift;
     font-size: 20px;
   }
-  
-  .info_container {
+
+  h1 {
+    padding: 20px;
+  }
+
+  .about_container {
     display: flex;
     flex-flow: column;
     align-items: center;
-    max-width: 1120px;
-    width: 90%;
+    padding-left: 90px;
+    padding-right: 90px;
+    width: 100%;
     margin: 0 auto;
   }
   
-  .info_wrapper {
+  .about_wrapper {
     position: relative;
     margin: 50px 5px 50px;
   }
   
-  .info_items {
+  .about_items {
     margin-bottom: 24px;
   }
 
@@ -38,16 +35,16 @@
     margin-bottom: 0px;
   }
 
+  .about_wrapper > img {
+    position: relative;
+    width: 600px;
+    height: auto;
+    max-width: 100%;
+    display: visible; 
+  }
+  
   @media only screen and (min-width: 1024px) {
     .cards_items {
       display: flex;
     }
-  }
-
-  img {
-    position: relative;
-    width: 800px;
-    height: auto;
-    max-width: 100%;
-    display: visible; 
   }
